# web_search

./: pyproject.toml
scripts/: run.sh
src/tests/: test_brave.py
src/web_search/: __main__.py  config.py  formatters.py  types.py
src/web_search/providers/: brave.py
